--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@types/node": "18.11.9",
+    "@types/p5": "^1.4.3",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
+    "p5": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-p5-wrapper": "^3.4.0",
     "typescript": "4.9.3"
   }
 }
