--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.218.0",
+    "@aws-sdk/lib-dynamodb": "^3.218.0",
     "@types/node": "18.11.9",
     "@types/p5": "^1.4.3",
     "@types/react": "18.0.25",
@@ -20,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-p5-wrapper": "^3.4.0",
+    "swr": "^1.3.0",
     "typescript": "4.9.3"
   }
 }
