--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
     "react-p5-wrapper": "^3.4.0",
     "swr": "^1.3.0",
     "typescript": "4.9.3"
-  }
+  },
+  "browserslist": [
+    "chrome 64",
+    "chrome 73",
+    "edge 79",
+    "firefox 67",
+    "opera 51",
+    "safari 12"
+  ]
 }
